fix contrast issues for accessbility

--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@
 @font-face {
   font-family: "Inter";
   src: url("../assets/fonts/Inter.ttf") format("truetype");
+  font-display: swap;
 }
 
 @font-face {
