--- a/css/section-item.css
+++ b/css/section-item.css
@@ -7,7 +7,7 @@
 }
 
 .section-item span {
-  color: var(--grayish-blue);
+  color: var(--gray);
   margin: 0;
   font-size: 2rem;
   font-weight: 700;
